feat(User): Impl delete user account
